--- a/src/stories/assets/example.html
+++ b/src/stories/assets/example.html
@@ -1,11 +1,4 @@
-<div
-  style="
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: masonry;
-    gap: 1em;
-  "
->
+<div class="masonry-layout">
   <div style="height: 100px; background-color: red"></div>
   <div style="height: 220px; background-color: green"></div>
   <div style="height: 40px; background-color: blue"></div>
@@ -16,3 +9,12 @@
   <div style="height: 120px; background-color: cyan"></div>
   <div style="height: 150px; background-color: magenta"></div>
 </div>
+<style>
+  .masonry-layout {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: masonry;
+    gap: 1em;
+    max-width: 60em;
+  }
+</style>
