--- a/src/stories/assets/demo.html
+++ b/src/stories/assets/demo.html
@@ -16,8 +16,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: masonry;
-    gap: 1em;
-    max-width: 60em;
+    gap: 10px;
   }
   .masonry-layout img {
     width: 100%;
