--- a/src/stories/assets/example.html
+++ b/src/stories/assets/example.html
@@ -14,7 +14,6 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: masonry;
-    gap: 1em;
-    max-width: 60em;
+    gap: 10px;
   }
 </style>
